--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,8 @@
 
   <body>
     <!-- header -->
-    <header class="page-header">
+
+    <!-- <header class="page-header"> 
       <div class="container page-header-container">
         <nav class="page-nav">
           <a class="logo-header logo link" href="./index.html"
@@ -54,13 +55,13 @@
           </ul>
         </address>
       </div>
-    </header>
+     </header> -->
 
-    <main>
+    <!-- <main> 
       <section class="portfolio">
-        <div class="container portfolio-container">
+        <div class="container portfolio-container">-->
           <!-- Buttons -->
-          <h1 class="portfolio-title visually-hidden">Our portfolio</h1>
+          <!-- <h1 class="portfolio-title visually-hidden">Our portfolio</h1> 
           <ul class="portfolio-menu list">
             <li class="portfolio-menu-item">
               <button class="portfolio-menu-open-btn" type="button">All</button>
@@ -83,11 +84,11 @@
                 Marketing
               </button>
             </li>
-          </ul>
+           </ul> -->
 
           <!-- Gallery -->
 
-          <ul class="portfolio-list list">
+          <!-- <ul class="portfolio-list list"> 
             <li class="portfolio-list-item">
               <a class="portfolio-list-item-link link" href="">
                 <div class="portfolio-list-item-img-wrapper">
@@ -281,7 +282,7 @@
         </div>
       </section>
     </main>
-
+-->
     <!-- FOOTER -->
   
     <footer class="footer">
